Fix center aligning levels

--- a/components/Experience/experience.module.scss
+++ b/components/Experience/experience.module.scss
@@ -7,3 +7,7 @@
   margin-right: auto;
   justify-content: left;
 }
+
+.levelMiddle {
+  flex: 1;
+}
